# dockerfinwatch

./: README.md  dockerclustermon.toml  pyproject.toml
src/dockerfinwatch/: application.py  config.py  demo.py  docker.py  local.py  monitor.py  runner_factory.py  ssh.py  ui.py  ui.tcss
src/textual_dockerclustermon/: __init__.py  application.py  commands.py  config.py  demo.py  docker.py  local.py  monitor.py  runner_factory.py  ssh.py  ui.py  ui.tcss
tests/: helpers.py  test_application.py  test_config.py  test_docker_ps_query.py  test_local.py  test_monitor_service.py  test_runner_factory.py  test_ssh.py  test_ui.py
